[gd_scene load_steps=9 format=3 uid="uid://bjh06t852i7rh"]

[ext_resource type="Script" path="res://scripts/level_5.gd" id="1_km2yk"]
[ext_resource type="TileSet" uid="uid://dyd4siua4n4bj" path="res://tile_set.tres" id="1_rw5d0"]
[ext_resource type="PackedScene" uid="uid://c3006mys53cg1" path="res://shop.tscn" id="3_s8ut7"]
[ext_resource type="FontFile" uid="uid://20gyl166ue3r" path="res://assets/kirifont/KiriFont.ttf" id="4_3fkpg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mlqf1"]
size = Vector2(36, 61)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_66jku"]
size = Vector2(36, 54)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_13owt"]
size = Vector2(47, 63)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_141oy"]
load_path = "res://.godot/imported/Wooden Board.png-28f920663fef330cd08a1b3441fd9511.ctex"

[node name="level_5" type="Node2D"]
script = ExtResource("1_km2yk")

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2(3, 3)
tile_set = ExtResource("1_rw5d0")
format = 2
layer_0/tile_data = PackedInt32Array(65537, 65538, 3, 786463, 458754, 0, 786462, 458754, 0, 786461, 458754, 0, 786460, 458754, 0, 786459, 458754, 0, 786458, 458754, 0, 786457, 458754, 0, 786456, 458754, 0, 786455, 458754, 0, 786454, 458754, 0, 1310751, 458754, 3, 1310750, 458754, 3, 1310749, 458754, 3, 1310748, 458754, 3, 1310747, 458754, 3, 1310746, 458754, 3, 1310745, 458754, 3, 1310744, 458754, 3, 1310743, 458754, 3, 1310742, 458754, 3, 1310741, 458754, 3, 1310740, 458754, 3, 1310739, 458754, 3, 1310738, 458754, 3, 1310737, 458754, 3, 1310736, 458754, 3, 1310735, 458754, 3, 1310734, 458754, 3, 1310733, 458754, 3, 1310732, 458754, 3, 1310731, 458754, 3, 1310730, 458754, 3, 1310729, 2, 2, 1245193, 458754, 2, 1179657, 458754, 2, 1114121, 458754, 2, 1048585, 458754, 2, 983049, 458754, 2, 917513, 458754, 2, 851977, 131074, 2, 65538, 327682, 0, 65539, 327682, 0, 65540, 393218, 0, 65541, 458754, 0, 65542, 393218, 0, 65543, 524290, 0, 65544, 458754, 0, 65545, 393218, 0, 65546, 393218, 0, 65547, 393218, 0, 65548, 393218, 0, 65549, 458754, 0, 65550, 458754, 0, 65551, 327682, 0, 65552, 458754, 0, 65553, 65538, 1, 131073, 524290, 2, 196609, 393218, 2, 262145, 655362, 7, 327681, 393218, 2, 393217, 393218, 2, 458753, 393218, 2, 524289, 393218, 2, 589825, 655362, 7, 655361, 393218, 2, 720897, 524290, 2, 786433, 524290, 2, 851969, 2, 2, 851970, 393218, 3, 851971, 393218, 3, 851972, 393218, 3, 851973, 393218, 3, 851974, 327682, 0, 851975, 393218, 3, 851976, 393218, 3, 262165, 851970, 6, 589845, 851970, 6, 720917, 458754, 1, 655381, 393218, 1, 786453, 131074, 0, 524309, 393218, 1, 458773, 524290, 1, 393237, 393218, 1, 327701, 393218, 1, 196629, 196610, 1, 17, 65538, 3, 18, 393218, 0, 19, 393218, 0, 20, 393218, 0, 21, 393218, 0, 22, 393218, 0, 23, 327682, 0, 24, 327682, 0, 25, 393218, 0, 26, 458754, 0, 27, 458754, 0, 28, 393218, 0, 29, 458754, 0, 196630, 393218, 3, 196631, 327682, 3, 196632, 393218, 3, 196633, 393218, 3, 196634, 131074, 2, 30, 2, 0, 65566, 458754, 1, 131102, 458754, 1, 196638, 458754, 1, 262174, 393218, 1, 524318, 196610, 3, 458782, 393218, 1, 327710, 458754, 1, 393246, 458754, 1, 262170, 458754, 2, 327706, 458754, 2, 393242, 393218, 2, 458778, 393218, 2, 524316, 786434, 13, 524317, 327682, 3, 524314, 2, 2, 524315, 393218, 3, 131074, 524288, 4, 65554, 524288, 4, 65565, 720896, 4, 1245194, 524288, 7, 786434, 524288, 7, 458781, 720896, 7, 458779, 524288, 7, 65555, 655360, 4, 65556, 655360, 4, 65557, 655360, 4, 65558, 655360, 4, 65559, 655360, 4, 65560, 655360, 4, 65561, 655360, 4, 65562, 655360, 4, 65563, 655360, 4, 65564, 655360, 4, 131101, 720896, 6, 196637, 720896, 6, 262173, 720896, 6, 327709, 720896, 6, 393245, 720896, 6, 458780, 589824, 7, 589855, 196610, 13, 524319, 196610, 12, 458783, 196610, 12, 393247, 196610, 12, 327711, 196610, 12, 262175, 196610, 12, 196639, 196610, 12, 131103, 196610, 12, 65567, 196610, 12, 31, 196610, 12, -65505, 2, 10, -65506, 196610, 10, -65507, 196610, 10, -65508, 196610, 10, -65509, 196610, 10, -65510, 196610, 10, -65511, 196610, 10, -65512, 196610, 10, -65513, 196610, 10, -65514, 196610, 10, -65515, 196610, 10, -65516, 196610, 10, -65517, 196610, 10, -65518, 196610, 10, -65519, 196610, 10, 16, 65538, 11, -65520, 65538, 13, 15, 196610, 10, 14, 196610, 10, 13, 196610, 10, 12, 196610, 10, 11, 196610, 10, 10, 196610, 10, 9, 196610, 10, 8, 196610, 10, 7, 196610, 10, 6, 196610, 10, 5, 196610, 10, 4, 196610, 10, 3, 196610, 10, 2, 196610, 10, 1, 196610, 10, 0, 65538, 13, 65536, 65538, 10, 131072, 65538, 10, 196608, 65538, 10, 262144, 65538, 10, 327680, 65538, 10, 393216, 65538, 10, 458752, 65538, 10, 524288, 65538, 10, 589824, 65538, 10, 655360, 65538, 10, 720896, 65538, 10, 786432, 65538, 10, 851968, 65538, 10, 917505, 65538, 12, 917506, 65538, 12, 917507, 65538, 12, 917508, 65538, 12, 917509, 65538, 12, 917510, 65538, 12, 917511, 65538, 12, 917512, 131074, 12, 917504, 2, 12, 983048, 65538, 10, 1048584, 65538, 10, 1114120, 65538, 10, 1179656, 65538, 10, 1245192, 65538, 10, 1310728, 65538, 10, 1376264, 2, 12, 1376265, 65538, 12, 1376266, 65538, 12, 1376267, 65538, 12, 1376268, 65538, 12, 1376269, 65538, 12, 1376270, 65538, 12, 1376271, 65538, 12, 1376272, 65538, 12, 1376273, 65538, 12, 1376274, 65538, 12, 1376275, 65538, 12, 1376276, 65538, 12, 1376277, 65538, 12, 1376278, 65538, 12, 1376279, 65538, 12, 1376280, 65538, 12, 1376281, 65538, 12, 1376282, 65538, 12, 1376283, 65538, 12, 1376284, 65538, 12, 1376285, 65538, 12, 1376286, 65538, 12, 1376287, 65538, 12, 720919, 196610, 10, 720920, 196610, 10, 720921, 196610, 10, 720922, 196610, 10, 720923, 196610, 10, 720924, 196610, 10, 720925, 196610, 10, 720926, 196610, 10, 720927, 196610, 10, 720918, 131074, 10, 458774, 196610, 12, 524310, 196610, 12, 589846, 196610, 12, 655382, 196610, 12, 327702, 196610, 12, 393238, 196610, 12, 327705, 65538, 10, 393241, 65538, 10, 458777, 65538, 10, 524313, 65538, 10, 262169, 131074, 12, 262166, 196610, 11, 262167, 196610, 10, 262168, 196610, 10, 589849, 2, 12, 589850, 65538, 12, 589851, 65538, 12, 589852, 65538, 12, 589853, 65538, 12, 589854, 65538, 12, 1245195, 589824, 7, 1245196, 589824, 7, 1245197, 589824, 7, 1245198, 589824, 7, 1245199, 589824, 7, 1245200, 589824, 7, 1245201, 589824, 7, 1245202, 589824, 7, 1245203, 589824, 7, 1245204, 589824, 7, 1245205, 589824, 7, 1245206, 589824, 7, 1245207, 589824, 7, 1245208, 589824, 7, 1245209, 589824, 7, 1245210, 589824, 7, 1245211, 589824, 7, 1245212, 589824, 7, 1245213, 589824, 7, 1245214, 589824, 7, 1245215, 589824, 7, 851990, 655360, 4, 851991, 655360, 4, 851992, 655360, 4, 851993, 655360, 4, 851994, 655360, 4, 851995, 655360, 4, 851996, 655360, 4, 851997, 655360, 4, 851998, 655360, 4, 851999, 655360, 4, 851989, 655360, 4, 851988, 393216, 5, 131092, 393216, 6, 131093, 589824, 7, 131094, 589824, 7, 131095, 589824, 7, 131096, 589824, 7, 131097, 589824, 7, 131098, 589824, 7, 131099, 327680, 6, 196635, 524288, 5, 262171, 524288, 5, 327707, 524288, 5, 393243, 524288, 5, 131100, 589824, 6, 196636, 589824, 6, 262172, 589824, 6, 327708, 589824, 6, 393244, 589824, 6, 917515, 589824, 6, 983051, 589824, 6, 1048587, 589824, 6, 1114123, 589824, 6, 1179659, 589824, 6, 917516, 589824, 6, 983052, 589824, 6, 1048588, 589824, 6, 1114124, 589824, 6, 1179660, 589824, 6, 917517, 589824, 6, 983053, 589824, 6, 1048589, 589824, 6, 1114125, 589824, 6, 1179661, 589824, 6, 917518, 589824, 6, 983054, 589824, 6, 1048590, 589824, 6, 1114126, 589824, 6, 1179662, 589824, 6, 917519, 589824, 6, 983055, 589824, 6, 1048591, 589824, 6, 1114127, 589824, 6, 1179663, 589824, 6, 917520, 589824, 6, 983056, 589824, 6, 1048592, 589824, 6, 1114128, 589824, 6, 1179664, 589824, 6, 917521, 589824, 6, 983057, 589824, 6, 1048593, 589824, 6, 1114129, 589824, 6, 1179665, 589824, 6, 917522, 589824, 6, 983058, 589824, 6, 1048594, 589824, 6, 1114130, 589824, 6, 1179666, 589824, 6, 917523, 589824, 6, 983059, 589824, 6, 1048595, 589824, 6, 1114131, 589824, 6, 1179667, 589824, 6, 917524, 589824, 6, 983060, 589824, 6, 1048596, 589824, 6, 1114132, 589824, 6, 1179668, 589824, 6, 917525, 589824, 6, 983061, 589824, 6, 1048597, 589824, 6, 1114133, 589824, 6, 1179669, 589824, 6, 917526, 589824, 6, 983062, 589824, 6, 1048598, 589824, 6, 1114134, 589824, 6, 1179670, 589824, 6, 917527, 589824, 6, 983063, 589824, 6, 1048599, 589824, 6, 1114135, 589824, 6, 1179671, 589824, 6, 917528, 589824, 6, 983064, 589824, 6, 1048600, 589824, 6, 1114136, 589824, 6, 1179672, 589824, 6, 917529, 589824, 6, 983065, 589824, 6, 1048601, 589824, 6, 1114137, 589824, 6, 1179673, 589824, 6, 917530, 589824, 6, 983066, 589824, 6, 1048602, 589824, 6, 1114138, 589824, 6, 1179674, 589824, 6, 917531, 589824, 6, 983067, 589824, 6, 1048603, 589824, 6, 1114139, 589824, 6, 1179675, 589824, 6, 917532, 589824, 6, 983068, 589824, 6, 1048604, 589824, 6, 1114140, 589824, 6, 1179676, 589824, 6, 917533, 589824, 6, 983069, 589824, 6, 1048605, 589824, 6, 1114141, 589824, 6, 1179677, 589824, 6, 917534, 589824, 6, 983070, 589824, 6, 1048606, 589824, 6, 1114142, 589824, 6, 1179678, 589824, 6, 917535, 589824, 6, 983071, 589824, 6, 1048607, 589824, 6, 1114143, 589824, 6, 1179679, 589824, 6, 196628, 720896, 6, 262164, 720896, 5, 327700, 720896, 6, 393236, 720896, 6, 458772, 720896, 6, 524308, 720896, 6, 589844, 720896, 5, 655380, 720896, 6, 720916, 720896, 6, 786452, 720896, 6, 131075, 655360, 4, 131076, 655360, 4, 131077, 655360, 4, 131078, 655360, 4, 131079, 655360, 4, 131080, 655360, 4, 131081, 655360, 4, 131082, 655360, 4, 131083, 655360, 4, 131084, 655360, 4, 131085, 655360, 4, 131086, 655360, 4, 131087, 655360, 4, 131088, 655360, 4, 131089, 655360, 4, 131090, 327680, 5, 131091, 589824, 6, 196627, 589824, 6, 262163, 589824, 6, 327699, 589824, 6, 393235, 589824, 6, 458771, 589824, 6, 524307, 589824, 6, 589843, 589824, 6, 655379, 589824, 6, 720915, 589824, 6, 786451, 589824, 6, 851987, 589824, 6, 196611, 589824, 6, 262147, 589824, 6, 327683, 589824, 6, 393219, 589824, 6, 458755, 589824, 6, 524291, 589824, 6, 589827, 589824, 6, 655363, 589824, 6, 720899, 589824, 6, 786435, 589824, 7, 196612, 589824, 6, 262148, 589824, 6, 327684, 589824, 6, 393220, 589824, 6, 458756, 589824, 6, 524292, 589824, 6, 589828, 589824, 6, 655364, 589824, 6, 720900, 589824, 6, 786436, 589824, 7, 196613, 589824, 6, 262149, 589824, 6, 327685, 589824, 6, 393221, 589824, 6, 458757, 589824, 6, 524293, 589824, 6, 589829, 589824, 6, 655365, 589824, 6, 720901, 589824, 6, 786437, 589824, 7, 196614, 589824, 6, 262150, 589824, 6, 327686, 589824, 6, 393222, 589824, 6, 458758, 589824, 6, 524294, 589824, 6, 589830, 589824, 6, 655366, 589824, 6, 720902, 589824, 6, 786438, 589824, 7, 196615, 589824, 6, 262151, 589824, 6, 327687, 589824, 6, 393223, 589824, 6, 458759, 589824, 6, 524295, 589824, 6, 589831, 589824, 6, 655367, 589824, 6, 720903, 589824, 6, 786439, 589824, 7, 196616, 589824, 6, 262152, 589824, 6, 327688, 589824, 6, 393224, 589824, 6, 458760, 589824, 6, 524296, 589824, 6, 589832, 589824, 6, 655368, 589824, 6, 720904, 589824, 6, 786440, 589824, 7, 196617, 589824, 6, 262153, 589824, 6, 327689, 589824, 6, 393225, 589824, 6, 458761, 589824, 6, 524297, 589824, 6, 589833, 589824, 6, 655369, 589824, 6, 720905, 589824, 6, 786441, 589824, 7, 196618, 589824, 6, 262154, 589824, 6, 327690, 589824, 6, 393226, 589824, 6, 458762, 589824, 6, 524298, 589824, 6, 589834, 589824, 6, 655370, 589824, 6, 720906, 589824, 6, 786442, 327680, 6, 196619, 589824, 6, 262155, 589824, 6, 327691, 589824, 6, 393227, 589824, 6, 458763, 589824, 6, 524299, 589824, 6, 589835, 589824, 6, 655371, 589824, 6, 720907, 589824, 6, 786443, 589824, 6, 196620, 589824, 6, 262156, 589824, 6, 327692, 589824, 6, 393228, 589824, 6, 458764, 589824, 6, 524300, 589824, 6, 589836, 589824, 6, 655372, 589824, 6, 720908, 589824, 6, 786444, 589824, 6, 196621, 589824, 6, 262157, 589824, 6, 327693, 589824, 6, 393229, 589824, 6, 458765, 589824, 6, 524301, 589824, 6, 589837, 589824, 6, 655373, 589824, 6, 720909, 589824, 6, 786445, 589824, 6, 196622, 589824, 6, 262158, 589824, 6, 327694, 589824, 6, 393230, 589824, 6, 458766, 589824, 6, 524302, 589824, 6, 589838, 589824, 6, 655374, 589824, 6, 720910, 589824, 6, 786446, 589824, 6, 196623, 589824, 6, 262159, 589824, 6, 327695, 589824, 6, 393231, 589824, 6, 458767, 589824, 6, 524303, 589824, 6, 589839, 589824, 6, 655375, 589824, 6, 720911, 589824, 6, 786447, 589824, 6, 196624, 589824, 6, 262160, 589824, 6, 327696, 589824, 6, 393232, 589824, 6, 458768, 589824, 6, 524304, 589824, 6, 589840, 589824, 6, 655376, 589824, 6, 720912, 589824, 6, 786448, 589824, 6, 196625, 589824, 6, 262161, 589824, 6, 327697, 589824, 6, 393233, 589824, 6, 458769, 589824, 6, 524305, 589824, 6, 589841, 589824, 6, 655377, 589824, 6, 720913, 589824, 6, 786449, 589824, 6, 196626, 589824, 6, 262162, 589824, 6, 327698, 589824, 6, 393234, 589824, 6, 458770, 589824, 6, 524306, 589824, 6, 589842, 589824, 6, 655378, 589824, 6, 720914, 589824, 6, 786450, 589824, 6, 851978, 524288, 5, 917514, 524288, 5, 983050, 524288, 5, 1048586, 524288, 5, 1114122, 524288, 5, 1179658, 524288, 5, 851979, 589824, 6, 851980, 589824, 6, 851981, 589824, 6, 851982, 589824, 6, 851983, 589824, 6, 851984, 589824, 6, 851985, 589824, 6, 851986, 589824, 6, 589826, 524288, 6, 262146, 524288, 6, 196610, 524288, 5, 327682, 524288, 5, 393218, 524288, 5, 458754, 524288, 5, 524290, 524288, 5, 655362, 524288, 5, 720898, 524288, 5, 327703, 589825, 7, 393239, 589825, 7, 458775, 589825, 7, 524311, 589825, 7, 589847, 589825, 7, 655383, 589825, 7, 327704, 589825, 7, 393240, 589825, 7, 458776, 589825, 7, 524312, 589825, 7, 589848, 589825, 7, 655384, 589825, 7, 655385, 589825, 7, 655386, 589825, 7, 655387, 589825, 7, 655388, 589825, 7, 655389, 589825, 7, 655390, 589825, 7, 655391, 589825, 7, 655397, 589825, 7, 655398, 589825, 7, 655399, 589825, 7, 655400, 589825, 7, -65504, 589825, 7, 32, 589825, 7, 65568, 589825, 7, 131104, 589825, 7, 196640, 589825, 7, 262176, 589825, 7, 327712, 589825, 7, 393248, 589825, 7, 458784, 589825, 7, 524320, 589825, 7, 589856, 589825, 7, -65503, 589825, 7, 33, 589825, 7, 65569, 589825, 7, 131105, 589825, 7, 196641, 589825, 7, 262177, 589825, 7, 327713, 589825, 7, 393249, 589825, 7, 458785, 589825, 7, 524321, 589825, 7, 589857, 589825, 7, -65502, 589825, 7, 34, 589825, 7, 65570, 589825, 7, 131106, 589825, 7, 196642, 589825, 7, 262178, 589825, 7, 327714, 589825, 7, 393250, 589825, 7, 458786, 589825, 7, 524322, 589825, 7, 589858, 589825, 7, -65501, 589825, 7, 35, 589825, 7, 65571, 589825, 7, 131107, 589825, 7, 196643, 589825, 7, 262179, 589825, 7, 327715, 589825, 7, 393251, 589825, 7, 458787, 589825, 7, 524323, 589825, 7, 589859, 589825, 7, -65500, 589825, 7, 36, 589825, 7, 65572, 589825, 7, 131108, 589825, 7, 196644, 589825, 7, 262180, 589825, 7, 327716, 589825, 7, 393252, 589825, 7, 458788, 589825, 7, 524324, 589825, 7, 589860, 589825, 7, -65499, 589825, 7, 37, 589825, 7, 65573, 589825, 7, 131109, 589825, 7, 196645, 589825, 7, 262181, 589825, 7, 327717, 589825, 7, 393253, 589825, 7, 458789, 589825, 7, 524325, 589825, 7, 589861, 589825, 7, -65498, 589825, 7, 38, 589825, 7, 65574, 589825, 7, 131110, 589825, 7, 196646, 589825, 7, 262182, 589825, 7, 327718, 589825, 7, 393254, 589825, 7, 458790, 589825, 7, 524326, 589825, 7, 589862, 589825, 7, -65497, 589825, 7, 39, 589825, 7, 65575, 589825, 7, 131111, 589825, 7, 196647, 589825, 7, 262183, 589825, 7, 327719, 589825, 7, 393255, 589825, 7, 458791, 589825, 7, 524327, 589825, 7, 589863, 589825, 7, -65496, 589825, 7, 40, 589825, 7, 65576, 589825, 7, 131112, 589825, 7, 196648, 589825, 7, 262184, 589825, 7, 327720, 589825, 7, 393256, 589825, 7, 458792, 589825, 7, 524328, 589825, 7, 589864, 589825, 7, 720933, 196610, 10, 786469, 458754, 0, 852005, 720896, 4, 917541, 720896, 6, 983077, 720896, 6, 1048613, 720896, 5, 1114149, 720896, 6, 1179685, 720896, 6, 1245221, 720896, 7, 1310757, 458754, 3, 1376293, 65538, 12, 1441829, 589825, 7, 1507365, 589825, 7, 720934, 196610, 10, 786470, 2, 0, 852006, 458754, 1, 917542, 458754, 1, 983078, 458754, 1, 1048614, 851970, 1, 1114150, 458754, 1, 1179686, 458754, 1, 1245222, 458754, 1, 1310758, 196610, 3, 1376294, 65538, 12, 1441830, 589825, 7, 1507366, 589825, 7, 720935, 2, 10, 786471, 196610, 12, 852007, 196610, 12, 917543, 196610, 12, 983079, 196610, 12, 1048615, 196610, 12, 1114151, 196610, 12, 1179687, 196610, 12, 1245223, 196610, 12, 1310759, 196610, 12, 1376295, 196610, 13, 1441831, 589825, 7, 1507367, 589825, 7, 720936, 589825, 7, 786472, 589825, 7, 852008, 589825, 7, 917544, 589825, 7, 983080, 589825, 7, 1048616, 589825, 7, 1114152, 589825, 7, 1179688, 589825, 7, 1245224, 589825, 7, 1310760, 589825, 7, 1376296, 589825, 7, 1441832, 589825, 7, 1507368, 589825, 7, 1441792, 589825, 7, 1507328, 589825, 7, 1441793, 589825, 7, 1507329, 589825, 7, 1441794, 589825, 7, 1507330, 589825, 7, 1441795, 589825, 7, 1507331, 589825, 7, 1441796, 589825, 7, 1507332, 589825, 7, 1441797, 589825, 7, 1507333, 589825, 7, 1441798, 589825, 7, 1507334, 589825, 7, 1441799, 589825, 7, 1507335, 589825, 7, 1441800, 589825, 7, 1507336, 589825, 7, 1441801, 589825, 7, 1507337, 589825, 7, 1441802, 589825, 7, 1507338, 589825, 7, 1441803, 589825, 7, 1507339, 589825, 7, 1441804, 589825, 7, 1507340, 589825, 7, 1441805, 589825, 7, 1507341, 589825, 7, 1441806, 589825, 7, 1507342, 589825, 7, 1441807, 589825, 7, 1507343, 589825, 7, 1441808, 589825, 7, 1507344, 589825, 7, 1441809, 589825, 7, 1507345, 589825, 7, 1441810, 589825, 7, 1507346, 589825, 7, 1441811, 589825, 7, 1507347, 589825, 7, 1441812, 589825, 7, 1507348, 589825, 7, 1441813, 589825, 7, 1507349, 589825, 7, 1441814, 589825, 7, 1507350, 589825, 7, 1441815, 589825, 7, 1507351, 589825, 7, 1441816, 589825, 7, 1507352, 589825, 7, 1441817, 589825, 7, 1507353, 589825, 7, 1441818, 589825, 7, 1507354, 589825, 7, 1441819, 589825, 7, 1507355, 589825, 7, 1441820, 589825, 7, 1507356, 589825, 7, 1441821, 589825, 7, 1507357, 589825, 7, 1441822, 589825, 7, 1507358, 589825, 7, 1441823, 589825, 7, 1507359, 589825, 7, 1441824, 589825, 7, 1507360, 589825, 7, 1441825, 589825, 7, 1507361, 589825, 7, 1441826, 589825, 7, 1507362, 589825, 7, 1441827, 589825, 7, 1507363, 589825, 7, 1441828, 589825, 7, 1507364, 589825, 7, 1048575, 589825, 7, 1114111, 589825, 7, 1179647, 589825, 7, 1245183, 589825, 7, 1310719, 589825, 7, 1376255, 589825, 7, 1441791, 589825, 7, 1507327, 589825, 7, 1572863, 589825, 7, 983040, 589825, 7, 1048576, 589825, 7, 1114112, 589825, 7, 1179648, 589825, 7, 1245184, 589825, 7, 1310720, 589825, 7, 1376256, 589825, 7, 983041, 589825, 7, 1048577, 589825, 7, 1114113, 589825, 7, 1179649, 589825, 7, 1245185, 589825, 7, 1310721, 589825, 7, 1376257, 589825, 7, 983042, 589825, 7, 1048578, 589825, 7, 1114114, 589825, 7, 1179650, 589825, 7, 1245186, 589825, 7, 1310722, 589825, 7, 1376258, 589825, 7, 983043, 589825, 7, 1048579, 589825, 7, 1114115, 589825, 7, 1179651, 589825, 7, 1245187, 589825, 7, 1310723, 589825, 7, 1376259, 589825, 7, 983044, 589825, 7, 1048580, 589825, 7, 1114116, 589825, 7, 1179652, 589825, 7, 1245188, 589825, 7, 1310724, 589825, 7, 1376260, 589825, 7, 983045, 589825, 7, 1048581, 589825, 7, 1114117, 589825, 7, 1179653, 589825, 7, 1245189, 589825, 7, 1310725, 589825, 7, 1376261, 589825, 7, 983046, 589825, 7, 1048582, 589825, 7, 1114118, 589825, 7, 1179654, 589825, 7, 1245190, 589825, 7, 1310726, 589825, 7, 1376262, 589825, 7, 983047, 589825, 7, 1048583, 589825, 7, 1114119, 589825, 7, 1179655, 589825, 7, 1245191, 589825, 7, 1310727, 589825, 7, 1376263, 589825, 7, 65535, 589825, 7, 131071, 589825, 7, 196607, 589825, 7, 262143, 589825, 7, 327679, 589825, 7, 393215, 589825, 7, 458751, 589825, 7, 524287, 589825, 7, 589823, 589825, 7, 655359, 589825, 7, 720895, 589825, 7, 786431, 589825, 7, 851967, 589825, 7, 917503, 589825, 7, 983039, 589825, 7, -1, 589825, 7, -65536, 589825, 7, -65535, 589825, 7, -65534, 589825, 7, -65533, 589825, 7, -65532, 589825, 7, -65531, 589825, 7, -65530, 589825, 7, -65529, 589825, 7, -65528, 589825, 7, -65527, 589825, 7, -65526, 589825, 7, -65525, 589825, 7, -65524, 589825, 7, -65523, 589825, 7, -65522, 589825, 7, -65521, 589825, 7, 655395, 589825, 7, 720931, 196610, 10, 786467, 458754, 0, 852003, 655360, 4, 917539, 589824, 6, 983075, 589824, 6, 1048611, 589824, 6, 1114147, 589824, 6, 1179683, 589824, 6, 1245219, 589824, 7, 1310755, 458754, 3, 1376291, 65538, 12, 655396, 589825, 7, 720932, 196610, 10, 786468, 458754, 0, 852004, 655360, 4, 917540, 589824, 6, 983076, 589824, 6, 1048612, 589824, 6, 1114148, 589824, 6, 1179684, 589824, 6, 1245220, 589824, 7, 1310756, 458754, 3, 1376292, 65538, 12, 655392, 589825, 7, 720928, 196610, 10, 786464, 458754, 0, 852000, 655360, 4, 917536, 589824, 6, 983072, 589824, 6, 1048608, 589824, 6, 1114144, 589824, 6, 1179680, 589824, 6, 1245216, 589824, 7, 1310752, 458754, 3, 1376288, 65538, 12, 655393, 589825, 7, 720929, 196610, 10, 786465, 458754, 0, 852001, 655360, 4, 917537, 589824, 6, 983073, 589824, 6, 1048609, 589824, 6, 1114145, 589824, 6, 1179681, 589824, 6, 1245217, 589824, 7, 1310753, 458754, 3, 1376289, 65538, 12, 655394, 589825, 7, 720930, 196610, 10, 786466, 458754, 0, 852002, 655360, 4, 917538, 589824, 6, 983074, 589824, 6, 1048610, 589824, 6, 1114146, 589824, 6, 1179682, 589824, 6, 1245218, 589824, 7, 1310754, 458754, 3, 1376290, 65538, 12)

[node name="enemies" type="Node2D" parent="."]

[node name="shop" parent="." instance=ExtResource("3_s8ut7")]
position = Vector2(1727, 680)

[node name="Area2D" type="Area2D" parent="."]
light_mask = 3
visibility_layer = 3
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
light_mask = 3
visibility_layer = 3
position = Vector2(1027, 217)
shape = SubResource("RectangleShape2D_mlqf1")

[node name="Area2D2" type="Area2D" parent="."]
light_mask = 3
visibility_layer = 3
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
light_mask = 3
visibility_layer = 3
position = Vector2(1027, 456)
shape = SubResource("RectangleShape2D_66jku")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="door" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="door"]
position = Vector2(1845.5, 790.5)
shape = SubResource("RectangleShape2D_13owt")

[node name="bat_and_rat_text" type="Sprite2D" parent="."]
position = Vector2(301, 812)
scale = Vector2(3, 3)
texture = SubResource("CompressedTexture2D_141oy")

[node name="Label" type="Label" parent="bat_and_rat_text"]
anchors_preset = -1
anchor_left = 0.0111111
anchor_right = 1.82222
anchor_bottom = 1.58511
offset_left = -40.6667
offset_top = -38.3333
offset_right = 35.3333
offset_bottom = 35.6667
scale = Vector2(0.33, 0.33)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_3fkpg")
theme_override_font_sizes/font_size = 30
text = "Bat / Rat:
HP: 1
Damage: 0
GoldDrop: 2"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
metadata/_edit_use_anchors_ = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_2_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
[connection signal="body_entered" from="door" to="." method="_on_door_body_entered"]
